--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "cors": "^2.8.5",
+        "dotenv": "^17.2.3",
         "ejs": "^3.1.10",
         "express": "^4.22.1",
         "multer": "^2.0.2"
